[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face M1N2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face M1N4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face M1N3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face M1N1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainScenes/World/Dialogues/Part1/Chef.gd" type="Script" id=5]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Icon Chef Normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Particle1-floaty_64.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/CaviarDreams/CaviarDreams_Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Images/Levels/Ingredients/Cut Cheese Normal.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face F2N1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face F2N4.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face F1N2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face F1N3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face F2N2.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face F2N3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face F1N4.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Chef Face F1N1.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Icon Chef Pressed.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/Levels/Basic Restaurant/Chefs/Icon Chef Hover.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle1",
"speed": 8.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle3",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle2",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512.007, 209.408 ), Vector2( 512.007, 230 ) ]
}

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 30.0
flag_disable_z = true
direction = Vector3( 50, 50, 0 )
gravity = Vector3( 0, 100, 0 )
orbit_velocity = 0.01
orbit_velocity_random = 0.0
angle = 1.0
angle_random = 1.0
anim_speed = 1.0

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 30.0
flag_disable_z = true
direction = Vector3( 50, 50, 0 )
gravity = Vector3( 0, 100, 0 )
orbit_velocity = 0.01
orbit_velocity_random = 0.0
angle = 1.0
angle_random = 1.0
anim_speed = 1.0

[node name="Chef" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 512.007, 213.673 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle3"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
autoplay = "DavidIDLE"
anims/DavidIDLE = SubResource( 2 )

[node name="Timer" type="Timer" parent="AnimatedSprite"]
wait_time = 5.0
autostart = true

[node name="AddIngredient" type="Particles2D" parent="AnimatedSprite"]
visible = false
material = SubResource( 3 )
position = Vector2( 469.628, -89.6434 )
scale = Vector2( 3, 3 )
process_material = SubResource( 4 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="AnimatedSprite/AddIngredient"]
margin_left = -21.4513
margin_top = -22.3446
margin_right = 18.5487
margin_bottom = 19.6554
custom_fonts/font = SubResource( 5 )
text = "+1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingredient" type="TextureRect" parent="AnimatedSprite/AddIngredient"]
margin_left = -23.535
margin_top = 40.0
margin_right = 558.465
margin_bottom = 546.0
rect_scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="addIngredientTimer" type="Timer" parent="AnimatedSprite/AddIngredient"]
wait_time = 5.0

[node name="endIngredientTimer" type="Timer" parent="AnimatedSprite/AddIngredient"]
one_shot = true

[node name="ChefButton" type="TextureButton" parent="."]
anchor_left = 0.262607
anchor_top = 0.0577979
anchor_right = 0.762607
anchor_bottom = 0.911131
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Particles" type="Particles2D" parent="."]
visible = false
material = SubResource( 6 )
position = Vector2( 536.96, 245.229 )
scale = Vector2( 3, 3 )
process_material = SubResource( 7 )
texture = ExtResource( 7 )

[node name="ParticlesTimer" type="Timer" parent="Particles"]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="AnimatedSprite/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AnimatedSprite/AddIngredient/addIngredientTimer" to="." method="_on_addIngredientTimer_timeout"]
[connection signal="timeout" from="AnimatedSprite/AddIngredient/endIngredientTimer" to="." method="_on_endIngredientTimer_timeout"]
[connection signal="pressed" from="ChefButton" to="." method="_on_ChefButton_pressed"]
[connection signal="timeout" from="Particles/ParticlesTimer" to="." method="_on_ParticlesTimer_timeout"]
